# CAmusic

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  OLD__Makefile__OLD  main.cpp  midi_probe.cpp  readme.md  test_2.cpp  try_2.cpp  utilities.cpp  utilities.hpp  utilities_gmp.cpp  utilities_gmp.hpp
Resources/JSON/: data.json
automatic/: crawler.cpp
headers/: CA.hpp  MIDIout.hpp  TotalisticCA.hpp
headers/BMP/: BMPgenerator.hpp
headers/CA/: CA.hpp  CA1d.hpp  TotalisticCA.hpp
headers/MIDI/: MIDIout.hpp
include/: ResourceHolder.hpp  ResourceHolder.inl  ResourceIdentifiers.h  Visualizer.hpp  utilities.hpp
include/App/: Application.hpp  CAHolder.hpp  Canvas.hpp  Carousel.hpp  CarouselState.hpp  MenuState.hpp  Settings.hpp  SettingsState.hpp  State.hpp  StateIdentifiers.hpp  StateStack.hpp  Visualizer.hpp  VisualizerState.hpp
include/BMP/: BMPgenerator.hpp
include/CA/: CA.hpp  CA1d.hpp  CA1dgen.hpp  CA1dtot.hpp  CA2d.hpp  Ca2d.hpp  TotalisticCA.hpp
include/Data/: DataAnalyzer.hpp
include/GUI/: InputField.hpp
include/MIDI/: MIDIout.hpp  midiToFile.hpp
sources/: CA.cpp  MIDIout.cpp  TotalisticCA.cpp
sources/BMP/: BMPgenerator.cpp
sources/CA/: CA.cpp  CA1d.cpp  TotalisticCA.cpp
sources/MIDI/: MIDIout.cpp
src/: CMakeLists.txt  Visualizer.cpp  main.cpp  utilities.cpp
src/App/: Application.cpp  CAHolder.cpp  Canvas.cpp  Carousel.cpp  CarouselState.cpp  MenuState.cpp  Settings.cpp  SettingsState.cpp  State.cpp  StateStack.cpp  Visualizer.cpp  VisualizerState.cpp
src/BMP/: BMPgenerator.cpp
src/CA/: CA.cpp  CA1d.cpp  CA1dgen.cpp  CA1dtot.cpp  CA2d.cpp  Ca2d.cpp  TotalisticCA.cpp
src/Data/: DataAnalyzer.cpp
src/GUI/: InputField.cpp
src/MIDI/: MIDIout.cpp  midiToFile.cpp
